istio/bookinfo/destination-rule/demo/reviews-destination-rule01.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews
  subsets:
    - name: v1
      labels:
        version: v1
    - name: test # Here is changed!!
      labels:
        test: beta # Here is changed!!
