istio/bookinfo/destination-rule/demo/reviews-destination-rule03.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews
  trafficPolicy: # Here is changed!!
    loadBalancer:
      simple: ROUND_ROBIN
