istio/bookinfo/destination-rule/demo/reviews-service02.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
        - destination:
            host: reviews
            subset: v1
          weight: 10 # Here is changed!!
        - destination:
            host: reviews
            subset: test
          weight: 90 # Here is changed!!
